--- a/app/views/zabbix_servers/_form.html.erb
+++ b/app/views/zabbix_servers/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <div class="form-group">
+    <input type="hidden" v-model="params.id" value="<%= @zabbix_server.id %>" v-if="control_type == 'edit'">
     <%= f.label :fqdn, class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
       <% if @zabbix_server.id == 1 %>
@@ -24,25 +25,21 @@
   <div class="form-group">
     <%= f.label :username, class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <input type="text" class="form-control" v-model="params.username" pattern="[^\s]+" required>
+      <input type="text" value="<%= @zabbix_server.username %>" class="form-control" v-model="params.username" pattern="[^\s]+" required>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :password, class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <input type="password" class="form-control" v-model="params.password" pattern="[^\s]+" required>
+      <input type="password" value="<%= @zabbix_server.password %>" class="form-control" v-model="params.password" pattern="[^\s]+" required>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :details, t('zabbix_servers.details'), class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <textarea id="details" class="form-control" v-model="params.details" rows="4"></textarea>
+      <textarea id="details" class="form-control" v-model="params.details" rows="4"><%= @zabbix_server.details %></textarea>
     </div>
   </div>
-  <div class="form-actions-top">
-    <button v-if="!new_loader" class="btn btn-primary" :disabled="!required_filed && !new_loader" @click="register">Register</button>
-    <span v-if="new_loader" v-cloak><%= link_to t('.cancel', default: t("helpers.links.background")), zabbix_servers_path, class: 'btn btn-primary' %></span>
-    <span v-if="!new_loader"><%= link_to t('.cancel', default: t("helpers.links.cancel")), zabbix_servers_path, class: 'btn btn-default' %></span>
-  </div>
+
 
 <% end %>
