--- a/app/views/layouts/_navbar_top.html.erb
+++ b/app/views/layouts/_navbar_top.html.erb
@@ -21,7 +21,7 @@
           <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
   <% if current_user.admin? && current_user.master? %>
             <li role="presentation"><%= link_to 'Zabbix Servers', zabbix_servers_path %></li>
-            <li role="presentation"><%= link_to 'Chef Server', chef_server_app_settings_path %></li>
+            <li role="presentation"><%= link_to 'Chef Server', chef_servers_path %></li>
             <li role="presentation"><%= link_to t('infrastructures.database'), db_app_settings_path %></li>
             <li class="divider"></li>
   <% end %>
