Servertest views and controller remodel for CRUD

--- a/app/views/layouts/_navbar_top.html.erb
+++ b/app/views/layouts/_navbar_top.html.erb
@@ -26,7 +26,7 @@
             <li class="divider"></li>
   <% end %>
             <li role="presentation"><%= link_to t('dishes.dishes'), dishes_path %></li>
-            <li role="presentation"><%= link_to t('serverspecs.serverspecs'), serverspecs_path %></li>
+            <li role="presentation"><%= link_to t('servertests.servertests'), servertests_path %></li>
             <li role="presentation"><%= link_to t('cf_templates.cf_templates'), cf_templates_path %></li>
           </ul>
         </li>
