Modified migration files that adds references to each foreign keys and changed routes and servertest controller methods  model and views

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -40,7 +40,7 @@
              <ul class="dropdown-menu">
                <li v-if="picked">
                  <a @click="show_sched()" href='#'> <%=  t('infrastructures.btn.operation_schedule') %></a>
-                 <a :href='picked.serverspecs_path'>Serverspecs</a>
+                 <a :href='picked.servertests_path'>Serverspecs</a>
                </li>
              </ul>
         </div>
