--- a/app/views/servertests/generator.html.erb
+++ b/app/views/servertests/generator.html.erb
@@ -12,6 +12,6 @@
   <div class="row form-actions-top">
     <button class="btn btn-primary save-serverspec-btn"><%=t('helpers.titles.save')%></button>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-      servertest_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
+      servertests_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
   </div>
 </div>
