--- a/app/views/servertests/index.html.erb
+++ b/app/views/servertests/index.html.erb
@@ -49,12 +49,12 @@
 
 
 <% if allow_change %>
-  <%= link_to t('.new', default: t('servertests.btn.add')),
+  <%= link_to t('.new', default: t('serverspecs.btn.add')),
     new_servertest_path(infrastructure_id: @infrastructure_id),
     class: 'btn btn-primary btn-small' %>
-  <%= link_to t('servertests.btn.generator'),
+  <%= link_to t('serverspecs.btn.generator'),
     generator_servertests_path(infrastructure_id: @infrastructure_id),
-    class: 'btn btn-primary btn-small' %>
+    class: 'btn btn-default btn-small' %>
 <% end %>
 
 <div class="page-header"></div>
