--- a/app/views/vue/_serverspec_tabpane.html.erb
+++ b/app/views/vue/_serverspec_tabpane.html.erb
@@ -61,12 +61,12 @@
         <form class="form-inline">
           <div class="form-group" v-if="enabled">
             <select v-model="frequency" :disabled="loading_s" class="form-control">
-              <% ServerspecSchedule::frequencies.keys.each do |f| %>
+              <% ServertestSchedule::frequencies.keys.each do |f| %>
                 <option value=<%= f %>><%= t "schedules.frequency.#{f}" %></option>
               <% end %>
             </select>
             <select v-model="day_of_week" :disabled="loading_s" v-if="frequency === 'weekly'" class="form-control">
-              <% ServerspecSchedule::day_of_weeks.keys.each do |e| %>
+              <% ServertestSchedule::day_of_weeks.keys.each do |e| %>
                 <option value=<%= e %>><%= t "schedules.day_of_week.#{e}" %></option>
               <% end %>
             </select>
