Retreive aws-marketplace changes different from develop branch

--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -2,9 +2,15 @@
 <% provide(:title, I18n.t("app_settings.title.setup")) %>
 <h1 class="page-header"><%= t 'app_settings.title.show' %></h1>
 
-<div class="panel panel-primary">
+<div id="indexElement" class="panel panel-primary" v-cloak>
+  <div class="alert alert-dismissible alert-warning" v-if="!isAllowedBrowser">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <h4><%= I18n.t("app_settings.warning") %></h4>
+    <p><%= raw I18n.t("app_settings.msg.warning_msg") %></p>
+  </div>
   <div class="panel-heading">
     <%= I18n.t("app_settings.title.setup") %>
+
   </div>
   <div class="panel-body">
     <%= render partial: 'panel_content_system' %>
@@ -13,7 +19,7 @@
 
   <div class="panel-footer">
     <div class="btn-toolbar">
-      <%= link_to t('app_settings.btn.done'), root_path, class: 'btn btn-primary diasbled', id: 'done-appsetting', disabled: "disabled" %>
+      <%= link_to t('app_settings.btn.done'), root_path, class: 'btn btn-primary disabled', id: 'done-appsetting', disabled: "disabled" %>
     </div>
   </div>
 </div>
