--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -283,3 +283,66 @@ pre {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+
+.dropzone-area {
+    width: 80%;
+    height: 200px;
+    position: relative;
+    border: 2px dashed #CBCBCB;
+    &:hover {
+        border: 2px dashed #2E94C4;
+        .dropzone-title {
+          color: #1975A0;
+        }
+
+    }
+}
+
+.dropzone-area input {
+    position: absolute;
+    cursor: pointer;
+    top: 0px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.dropzone-text {
+    position: absolute;
+    top: 50%;
+    text-align: center;
+    transform: translate(0, -50%);
+    width: 100%;
+    span {
+        display: block;
+        font-family: Arial, Helvetica;
+        line-height: 1.9;
+    }
+}
+
+.dropzone-title {
+    font-size: 13px;
+    color: #787878;
+    letter-spacing: 0.4px;
+}
+.dropzone-info {
+    font-size: 13px;
+    font-size: 0.8125rem;
+    color: #A8A8A8;
+    letter-spacing: 0.4px;
+}
+
+.dropzone-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: none;
+}
+
+.instructions{
+    color: #444444;;
+}
