- Fixed routes for running serverspecs to servertest - Fixed model relations and remove not working indexes and references - try to fix backend for serverspec runner and jobs and results saving

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -324,7 +324,7 @@
           <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="#" @click="select_serverspec()"><%= t('serverspecs.run') %></a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="#" @click="select_servertest()"><%= t('serverspecs.run') %></a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#" @click="serverspec_results()"><%= t('serverspecs.results') %></a></li>
         </ul>
       </div>
