--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -35,7 +35,7 @@
   <div class="form-group">
     <%= f.label :zabbix_server_id, t('projects.zabbix_servers'), class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.select :zabbix_server_id, @zabbix_servers.map{|x| [x.fqdn, x.id]}, {}, {class: "form-control"} %>
+      <%= f.select :zabbix_server_id, @zabbix_servers.map{|x| [x.fqdn, x.id]}, {prompt: true}, {class: "form-control"} %>
     </div>
   </div>
   <div class="form-group">
