Added ansu up NPM libraries, include and call methods for ansiup parse to HTML the ansi code features

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -359,7 +359,7 @@
     <div>
       <%# わざと一行で書いてます %>
       <%# TODO: id をつけていないとスクロール出来ない。Vueでうまくやりたい %>
-      <pre id="cook-status" class="pre-progress"><samp v-text="chef_console_text"></samp></pre>
+      <pre id="cook-status" class="pre-progress"><samp v-html="ansi_up(chef_console_text)"></samp></pre>
     </div>
   </div>
 </div>
