--- a/lib/erb-builder/templates/zabbix_server.json.erb
+++ b/lib/erb-builder/templates/zabbix_server.json.erb
@@ -28,17 +28,32 @@
       "Description" : "Name of EC2 Instance",
       "Type" : "String",
       "Default": "Zabbix Server for SkyHopper"
+    },
+    "VpcId": {
+      "Description" : "For VPC security groups without a default VPC (optional)",
+      "Type" : "String"
+    },
+    "SubnetId": {
+      "Description" : "The ID of the subnet that you want to launch the instance into (optional)",
+      "Type" : "String"
     }
+
   },
 
   "Mappings": {
     "RegionMap": <%= fragment(:ami_mappings) %>
   },
 
+  "Conditions": {
+    "HasVpcId": {"Fn::Not": [{"Fn::Equals": ["", {"Ref": "VpcId"}]}]},
+    "HasSubnetId": {"Fn::Not": [{"Fn::Equals": ["", {"Ref": "SubnetId"}]}]}
+  },
+
   "Resources" : {
     "SecurityGroup" : {
       "Type" : "AWS::EC2::SecurityGroup",
       "Properties" : {
+        "VpcId" : {"Fn::If": ["HasVpcId", {"Ref": "VpcId"}, {"Ref": "AWS::NoValue"}]},
         "GroupDescription" : "Enable SSH/HTTP/HTTPS",
         "SecurityGroupIngress" : [{
           "IpProtocol" : "tcp",
@@ -61,6 +76,7 @@
     "EC2Instance" : {
       "Type" : "AWS::EC2::Instance",
       "Properties" : {
+        "SubnetId" : {"Fn::If": ["HasSubnetId", {"Ref": "SubnetId"}, {"Ref": "AWS::NoValue"}]},
         "InstanceType" : { "Ref" : "InstanceType" },
         "KeyName" : { "Ref" : "KeyName" },
         "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
