Remove dropdown icon that triggers the get recipe function and added a filtering for get recipe method in edit runlist

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -198,6 +198,7 @@ h6.page-header {
 
 .recipes-selectbox-height {
   height: 285px !important;
+  background-image: none !important;
 }
 
 .runlist-selectbox-height {
