--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -55,6 +55,21 @@
         <p class="help-block"><%= t('app_settings.msg.aws_keypair') %></p>
       </div>
     </div>
+
+    <div class="form-group">
+      <label for="vpc_id" class="col-sm-3 control-label"><%= t 'app_settings.vpc_id' %></label>
+      <div class="col-sm-7">
+        <input type="text" class="form-control" id="vpc_id" name="vpc_id" placeholder="vpc-abcd1234 (optional)">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="subnet_id" class="col-sm-3 control-label"><%= t 'app_settings.subnet_id' %></label>
+      <div class="col-sm-7">
+        <input type="text" class="form-control" id="subnet_id" name="subnet_id" placeholder="subnet-abcd1234 (optional)">
+      </div>
+    </div>
+
   </fieldset>
 
 </form>
