--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -1,12 +1,24 @@
 <div class="modal fade" id="manage_schedule" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header center-block">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h3 class="modal-title"><%= I18n.t('operation_scheduler.modal_title')%>  <small>#{{sel_instance.physical_id}}</small></h3>
+
+        <ul class="nav nav-tabs" class="col-md-12">
+          <li role="presentation" :class="{'active': tabManual}" @click="change_tab('manual')"><a href="#">Manual</a></li>
+          <li role="presentation" :class="{'active': tabiCalendar}" @click="change_tab('icalendar')"><a href="#">iCalendar</a></li>
+        </ul>
+
       </div>
       <div class="modal-body">
-        <div class="col-md-12">
+        <div class="col-md-12" v-if="tabiCalendar">
+            <div class="form-group">
+              <label class="control-label" for="focusedInput">Select iCalendar File:</label>
+              <input id="focusedInput" class="form-control" type="file" @change="onFileChange"  accept=".ics ">
+            </div>
+        </div>
+        <div class="col-md-12" v-if="tabManual">
           <h4><%= I18n.t('operation_scheduler.duration')%> <small><a href="#" id="duration" @click="pop('duration')"
             data-content="<%= I18n.t('operation_scheduler.duration-content')%>"
             rel="popover" data-toggle="popover" data-trigger="focus"
@@ -33,15 +45,15 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12" v-if="tabManual">
           <hr>
           <h4> <%= I18n.t('operation_scheduler.recurring')%> <small><a href="#" id="recurring" @click="pop('recurring')"
-                               data-content="<%= I18n.t('operation_scheduler.recurring-content')%>"
-                               data-toggle="popover"
-                               data-trigger="focus"
-                               rel="popover"
-                               data-original-title="<%= I18n.t('operation_scheduler.recurring')%>"
-                               class="popover-help">
+           data-content="<%= I18n.t('operation_scheduler.recurring-content')%>"
+           data-toggle="popover"
+           data-trigger="focus"
+           rel="popover"
+           data-original-title="<%= I18n.t('operation_scheduler.recurring')%>"
+           class="popover-help">
             <span class="glyphicon glyphicon-question-sign"></span></a>
           </small></h4>
           <div class="form-group">
@@ -66,7 +78,12 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><%= I18n.t('helpers.links.cancel')%></button>
-        <button type="button" class="btn btn-primary" @click="save_sched()" :disabled="!save_sched_err" data-dismiss="modal"><%= I18n.t('helpers.titles.save')%></button>
+        <button v-if="tabManual" type="button" class="btn btn-primary" @click="save_sched()" :disabled="!save_sched_err" data-dismiss="modal">
+          <span ><%= I18n.t('helpers.titles.save')%></span>
+        </button>
+        <button v-if="tabiCalendar" type="button" class="btn btn-primary" @click="upload_calendar()" :disabled="!save_sched_err" data-dismiss="modal">
+          <span><%= I18n.t('helpers.titles.upload')%></span>
+        </button>
       </div>
     </div>
   </div>
