--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -55,23 +55,25 @@
            data-original-title="<%= I18n.t('operation_scheduler.recurring')%>"
            class="popover-help">
             <span class="glyphicon glyphicon-question-sign"></span></a>
-          </small></h4>
+          </small>
+          </h4>
           <div class="form-group">
             <label class="col-lg-2 control-label"><%= I18n.t('operation_scheduler.every')%> </label>
             <div class="col-lg-10">
               <div class="radio" v-for="mode in modes">
                 <label>
-                  <input type="radio" @change="repeat_selector()" id="desc" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" value="{{mode.value}}">
-                  {{mode.desc}}
+                  <radio-button name="options" :label="mode.desc" :choices="mode.value"  :value="sel_instance.repeat_freq" :options="mode.value" @change.prevent="repeat_selector"/>
                 </label>
               </div>
             </div>
           </div>
           </div>
           <div class="col-lg-12">
-            <div id="days-selector" class="col-sm-6" style="display: none">
+            <div v-if="days_selector" class="col-sm-6">
               <div class="checkbox" v-for="d in dates">
-                <label><input :checked="d.checked" v-model="d.checked" type="checkbox"> {{d.day}}</label>
+                <label class="checkbox">
+                  <input type="checkbox" :checked="is_checked(d.checked)" v-model="d.checked" id="day-selection"> {{d.day}}//{{d.checked}}
+                </label>
               </div>
             </div>
           </div>
