--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -12,13 +12,18 @@
 
       </div>
       <div class="modal-body">
+
+        <!--Upload iCalendar input tab-->
         <div class="col-md-12" v-if="tabiCalendar">
             <div class="form-group">
               <label class="control-label" for="focusedInput">Select iCalendar File:</label>
               <input id="focusedInput" class="form-control" type="file" @change="onFileChange"  accept=".ics ">
             </div>
         </div>
-        <div class="col-md-12" v-if="tabManual">
+
+
+        <!--Manual Calendar input tab-->
+        <div class="col-md-6" v-if="tabManual">
           <h4><%= I18n.t('operation_scheduler.duration')%> <small><a href="#" id="duration" @click="pop('duration')"
             data-content="<%= I18n.t('operation_scheduler.duration-content')%>"
             rel="popover" data-toggle="popover" data-trigger="focus"
@@ -27,26 +32,23 @@
             <span class="glyphicon glyphicon-question-sign"></span></a>
             </small>
           </h4>
-          <div class="col-lg-12">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-xs-12">
                 <%= I18n.t('operation_scheduler.start_date')%> & <%= I18n.t('operation_scheduler.start_time')%><input type="text" v-datepicker="sel_instance.start_date" v-model="sel_instance.start_date" class="form-control" id="op-sched-start">
                 <button class="btn btn-default btn-sm" type="button" @click="sel_instance.start_date = default_start">Default</button>
                 <span class="help-block">{{default_start}}</span>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-xs-12">
                 <%= I18n.t('operation_scheduler.end_date')%> & <%= I18n.t('operation_scheduler.end_time')%><input type="text" v-datepicker="sel_instance.end_date" v-model="sel_instance.end_date" class="form-control" id="op-sched-end">
                 <button class="btn btn-default btn-sm" type="button" @click="sel_instance.end_date = default_end">Default (+1 year)</button>
                 <span class="help-block">{{default_end}}</span>
                 <input type="hidden">
               </div>
             </div>
-          </div>
         </div>
-        <div class="col-md-12" v-if="tabManual">
-          <hr>
+        <div class="col-md-6" v-if="tabManual">
           <h4> <%= I18n.t('operation_scheduler.recurring')%> <small><a href="#" id="recurring" @click="pop('recurring')"
            data-content="<%= I18n.t('operation_scheduler.recurring-content')%>"
            data-toggle="popover"
@@ -57,27 +59,26 @@
             <span class="glyphicon glyphicon-question-sign"></span></a>
           </small>
           </h4>
-          <div class="form-group">
-            <label class="col-lg-2 control-label"><%= I18n.t('operation_scheduler.every')%> </label>
-            <div class="col-lg-10">
+            <label><%= I18n.t('operation_scheduler.every')%> </label>
               <div class="radio" v-for="mode in modes">
                 <label>
                   <radio-button name="options" :label="mode.desc" :choices="mode.value"  :value="sel_instance.repeat_freq" :options="mode.value" @change.prevent="repeat_selector"/>
                 </label>
               </div>
+          <div v-if="days_selector" class="col-xs-12">
+            <div v-if="!has_dates" class="alert alert-dismissible alert-danger">
+              <h4><%= t 'security_groups.msg.error' %></h4>
+              <p><%= t 'security_groups.msg.error_msg' %></p>
+            </div>
+            <div class="checkbox" v-for="d in dates">
+              <label class="checkbox">
+                <input type="checkbox" :checked="d.checked" v-model="d.checked"> {{d.day}}
+              </label>
             </div>
           </div>
-          </div>
-          <div class="col-lg-12">
-            <div v-if="days_selector" class="col-sm-6">
-              <div class="checkbox" v-for="d in dates">
-                <label class="checkbox">
-                  <input type="checkbox" :checked="is_checked(d.checked)" v-model="d.checked" id="day-selection"> {{d.day}}//{{d.checked}}
-                </label>
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><%= I18n.t('helpers.links.cancel')%></button>
         <button v-if="tabManual" type="button" class="btn btn-primary" @click="save_sched()" :disabled="!save_sched_err" data-dismiss="modal">
