--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -57,16 +57,26 @@
     </div>
 
     <div class="form-group">
-      <label for="vpc_id" class="col-sm-3 control-label"><%= t 'app_settings.vpc_id' %></label>
-      <div class="col-sm-7">
-        <input type="text" class="form-control" id="vpc_id" name="vpc_id" placeholder="vpc-abcd1234 (optional)">
-      </div>
+        <button id="btn-show-optional-inputs" class="btn btn-link btn-block">
+          <span class="glyphicon glyphicon-chevron-down"></span>
+          <%= t('common.optional') %>
+        </button>
     </div>
 
-    <div class="form-group">
-      <label for="subnet_id" class="col-sm-3 control-label"><%= t 'app_settings.subnet_id' %></label>
-      <div class="col-sm-7">
-        <input type="text" class="form-control" id="subnet_id" name="subnet_id" placeholder="subnet-abcd1234 (optional)">
+    <div id="optional-inputs" class="well" style="display: none;">
+      <legend><%= t('common.optional') %></legend>
+      <div class="form-group">
+        <label for="vpc_id" class="col-sm-3 control-label"><%= t 'app_settings.vpc_id' %></label>
+        <div class="col-sm-7">
+          <input type="text" class="form-control" id="vpc_id" name="vpc_id" placeholder="vpc-abcd1234 (optional)">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="subnet_id" class="col-sm-3 control-label"><%= t 'app_settings.subnet_id' %></label>
+        <div class="col-sm-7">
+          <input type="text" class="form-control" id="subnet_id" name="subnet_id" placeholder="subnet-abcd1234 (optional)">
+        </div>
       </div>
     </div>
 
