Added vue-router package and configuration and added sample route starter

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -78,7 +78,13 @@
       <%= t 'common.msg.loading' %>
       <hr>
     </div>
+
+    <div class="container">
+      <router-view></router-view>
+    </div>
   </div>
+
+
   <hr>
 
 
