Modifed class CSS style and changed background color to black to make white font visible

--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -283,3 +283,8 @@ pre {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+.terminal-ansi{
+    color: #b2dbfb !important;
+    background-color: #212121 !important;
+}
