--- a/app/assets/stylesheets/nodes.css
+++ b/app/assets/stylesheets/nodes.css
@@ -1,5 +1,6 @@
 .pre-progress {
   overflow: auto;
   height: 300px;
-  color: gray;
+  color: #b2dbfb !important;
+  background-color: #212121 !important;
 }
