--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -92,26 +92,26 @@
       </div>
     </div>
 
-    <div class="form-group">
-        <button id="btn-show-optional-inputs" class="btn btn-link btn-block">
+    <div class="form-group" v-if="!optional">
+        <a @click="optional = true" class="btn btn-link btn-block">
           <span class="glyphicon glyphicon-chevron-down"></span>
           <%= t('common.optional') %>
-        </button>
+        </a>
     </div>
 
-    <div id="optional-inputs" class="well" style="display: none;">
+    <div class="well" v-if="optional">
       <legend><%= t('common.optional') %></legend>
       <div class="form-group">
         <label for="vpc_id" class="col-sm-3 control-label"><%= t 'app_settings.vpc_id' %></label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" id="vpc_id" name="vpc_id" placeholder="vpc-abcd1234 (optional)">
+          <input type="text" class="form-control" :disabled="creating" v-model="params.vpc_id" placeholder="vpc-abcd1234 (optional)">
         </div>
       </div>
 
       <div class="form-group">
         <label for="subnet_id" class="col-sm-3 control-label"><%= t 'app_settings.subnet_id' %></label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" id="subnet_id" name="subnet_id" placeholder="subnet-abcd1234 (optional)">
+          <input type="text" class="form-control" :disabled="creating" v-model="params.subnet_id" placeholder="subnet-abcd1234 (optional)">
         </div>
       </div>
     </div>
