--- a/app/views/vue/_edit_monitoring_tabpane.html.erb
+++ b/app/views/vue/_edit_monitoring_tabpane.html.erb
@@ -88,7 +88,23 @@
     </table>
     <%= render 'monitorings/modal_update_templates' %>
   </div>
-  <div class="col-md-8 col-sm-6"></div>
+  <div class="col-md-7 col-sm-4">
+    <h4 class="page-header"><%= t 'monitoring.zabbix_servers' %></h4>
+
+    <div class="list-group">
+      <a href="#" class="list-group-item" v-for="z in zabbix_servers" :class="{active: z.is_checked}" @click="select_server(z)">
+        <bootstrap-tooltip :title.once="'<%= t 'monitoring.click_to_select' %>'">
+          <template slot="content">
+            <h4 class="list-group-item-heading">{{z.fqdn}}</h4>
+            <small>{{z.details}}</small>
+            <p class="list-group-item-text">{{z.created_at}}</p>
+            <p class="list-group-item-text">Version: {{z.version}}</p>
+          </template>
+        </bootstrap-tooltip>
+      </a>
+    </div>
+
+  </div>
 </div>
 
 <div class="form-actions-top">
